@@ -1,21 +1,6 @@
 ##
 # $Id$
 ##
-# $Log$
-# Revision 1.1  2000/06/20 22:10:44  agmorgan
-# Initial revision
-#
-# Revision 1.1.1.1  1998/07/12 05:17:14  morgan
-# Linux PAM sources pre-0.66
-#
-# Revision 1.6  1997/02/15 19:21:08  morgan
-# fixed email
-#
-# Revision 1.5  1996/08/09 05:29:43  morgan
-# trimmed in line with the removal of applications from the distribution
-#
-#
-##
 
 (now we are getting networked apps, be careful to try and test on a
 securely isolated system!)
