@@ -2,14 +2,6 @@
 #
 # $Id$
 #
-# $Log$
-# Revision 1.1  2000/06/20 22:10:45  agmorgan
-# Initial revision
-#
-# Revision 1.1.1.1  1998/07/12 05:17:14  morgan
-# Linux PAM sources pre-0.66
-#
-#
 # Created by Andrew G. Morgan (morgan@parc.power.net)
 #
 
