@@ -3,32 +3,6 @@
  * 
  * $Id$
  *
- * This header file documents the PAM SPI --- that is, interface
- * between the PAM library and a PAM service library which is called
- * by the PAM library.
- *
- * Note, the copyright information is at end of file.
- *
- * $Log$
- * Revision 1.1  2000/06/20 22:11:23  agmorgan
- * Initial revision
- *
- * Revision 1.1.1.1  1998/07/12 05:17:15  morgan
- * Linux PAM sources pre-0.66
- *
- * Revision 1.8  1997/01/04 20:14:42  morgan
- * moved PAM_DATA_SILENT to _pam_types.h so applications can use it too
- *
- * Revision 1.7  1996/11/10 19:57:08  morgan
- * pam_get_user prototype.
- *
- * Revision 1.6  1996/09/05 06:18:45  morgan
- * added some data error_status masks, changed prototype for cleanup()
- *
- * Revision 1.5  1996/06/02 07:58:37  morgan
- * altered the way in which modules obtain static prototypes for
- * functions
- *
  */
 
 #ifndef _SECURITY_PAM_MODULES_H
