@@ -6,16 +6,6 @@
  *
  * $Id$
  *
- * $Log$
- * Revision 1.1  2000/06/20 22:11:14  agmorgan
- * Initial revision
- *
- * Revision 1.2  1999/07/04 23:23:42  morgan
- * add appdata_ptr to app callback function
- *
- * Revision 1.1.1.1  1998/07/12 05:17:15  morgan
- * Linux PAM sources pre-0.66
- *
  */
 
 /*
