@@ -4,13 +4,6 @@
  *
  * $Id$
  *
- * $Log$
- * Revision 1.1  2000/06/20 22:11:20  agmorgan
- * Initial revision
- *
- * Revision 1.1.1.1  1998/07/12 05:17:15  morgan
- * Linux PAM sources pre-0.66
- *
  */
 
 #include <stdio.h>
