@@ -9,13 +9,6 @@
  * Please see end of file for copyright.
  *
  * Creator: Andrew Morgan.
- * 
- * $Log$
- * Revision 1.1  2000/06/20 22:11:21  agmorgan
- * Initial revision
- *
- * Revision 1.1.1.1  1998/07/12 05:17:15  morgan
- * Linux PAM sources pre-0.66
  *
  */
 
