@@ -1,14 +1,3 @@
 $Id$
 
-$Log$
-Revision 1.1  2000/06/20 22:11:46  agmorgan
-Initial revision
-
-Revision 1.1.1.1  1998/07/12 05:17:16  morgan
-Linux PAM sources pre-0.66
-
-Revision 1.2  1996/09/05 06:36:16  morgan
-revised for .52 to be released
-
-
 As of Linux-PAM-0.52 this is new. No known bugs yet.
