@@ -1,32 +1,6 @@
 /* 
  * $Id$
  *
- * $Log$
- * Revision 1.1  2000/06/20 22:11:49  agmorgan
- * Initial revision
- *
- * Revision 1.1.1.1  1998/07/12 05:17:17  morgan
- * Linux PAM sources pre-0.66
- *
- * Revision 1.6  1997/01/04 20:37:15  morgan
- * extra debugging
- *
- * Revision 1.5  1996/12/01 03:05:54  morgan
- * debugging with _pam_macros.h
- *
- * Revision 1.4  1996/11/10 21:03:57  morgan
- * pwdb conversion
- *
- * Revision 1.3  1996/09/05 06:45:45  morgan
- * tidied shadow acct management
- *
- * Revision 1.2  1996/09/01 01:13:14  morgan
- * Cristian Gafton's patches
- *
- * Revision 1.1  1996/08/29 13:27:51  morgan
- * Initial revision
- *
- *
  * See end of file for copyright information
  */
 
