@@ -1,26 +1,6 @@
 /*
  * $Id$
  *
- * $Log$
- * Revision 1.1  2000/06/20 22:11:51  agmorgan
- * Initial revision
- *
- * Revision 1.1.1.1  1998/07/12 05:17:16  morgan
- * Linux PAM sources pre-0.66
- *
- * Revision 1.4  1996/12/01 03:05:54  morgan
- * debugging with _pam_macros.h
- *
- * Revision 1.3  1996/11/10 21:05:33  morgan
- * pwdb conversion
- *
- * Revision 1.2  1996/09/05 06:49:02  morgan
- * more informative logging
- *
- * Revision 1.1  1996/08/29 13:27:51  morgan
- * Initial revision
- *
- *
  * See end for Copyright information
  */
 
