@@ -784,46 +784,3 @@ struct pam_module _pam_rhosts_auth_modstruct = {
 };
 
 #endif
-
-/*
- * $Log$
- * Revision 1.1  2000/06/20 22:11:56  agmorgan
- * Initial revision
- *
- * Revision 1.4  1999/11/08 05:46:58  morgan
- * fixes for .71
- *
- * Revision 1.3  1999/10/09 05:12:49  morgan
- * added hosts_equiv_rootok support
- *
- * Revision 1.2  1998/12/14 05:47:58  morgan
- * added a couple of options: specify the name of root, and don't do the
- * user-known check.
- *
- * Revision 1.1.1.1  1998/07/12 05:17:16  morgan
- * Linux PAM sources pre-0.66
- *
- * Revision 1.12  1997/09/27 14:34:01  morgan
- * fixed comment and renamed iruserok to pam_iruserok.
- *
- * Revision 1.11  1997/04/05 06:26:39  morgan
- * fairly major fixes and enhancements (see CHANGELOG for 0.57 release)
- *
- * Revision 1.10  1997/02/09 02:09:30  morgan
- * - implementation of 'debug' argument (Cristian Gafton)
- * - we check for uid=0 accounts instead of hardcoded 'root' (Cristian Gafton)
- *
- * Revision 1.9  1996/12/01 03:09:47  morgan
- * *** empty log message ***
- *
- * Revision 1.8  1996/11/12 06:08:59  morgan
- * Oliver Crow's "rootok" patch plus a little clean up of set_option
- * (AGM)
- *
- * Revision 1.7  1996/11/10 20:15:56  morgan
- * cross platform support
- *
- * Revision 1.6  1996/08/09 05:46:29  morgan
- * removed code for manually setting the remote username etc..
- *
- */
