@@ -28,16 +28,3 @@ unrecognised rules are ignored (but an error is logged to syslog(3))
 
 --------------------
 Bugs to Andrew <morgan@parc.power.net> or the list <pam-list@redhat.com>
-
-########################################################################
-# $Log$
-# Revision 1.1  2000/06/20 22:12:00  agmorgan
-# Initial revision
-#
-# Revision 1.1.1.1  1998/07/12 05:17:16  morgan
-# Linux PAM sources pre-0.66
-#
-# Revision 1.3  1997/01/04 20:42:43  morgan
-# I want email on parc now
-#
-#
